--- a/css/utilities.css
+++ b/css/utilities.css
@@ -11,9 +11,7 @@
 .font-21 {
     font-size:21px;
 }
-#primary-menu-trigger {
-    font-size:40px;
-}
+
 .text-hover:hover {
     text-decoration:underline;
 }
